# espot-rs

./: .gitignore  Cargo.toml
src/: main.rs  spinner.rs
src/dbus/: mod.rs
src/spotify/: cache.rs  error.rs  mod.rs
src/ui/: mod.rs  utils.rs
