[package]
name = "espot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7.0"
dirs = "4.0.0"
image = "0.24.1"
nanorand = "0.6.1"
librespot = "0.3.1"
futures-lite = "1.12.0"

tiny_http = "0.10.0"
webbrowser = "0.6.0"

serde = { version = "1.0.136", features = ["derive"] }
eframe = { version = "0.17.0", features = ["persistence"] }
rspotify = { version = "0.11.3", features = ["env-file"] }

reqwest = { version = "0.11.9", default-features = false, features = ["native-tls"] }
tokio = { version = "1.17.0", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }

[target.'cfg(unix)'.dependencies]
zbus = "2.1.1"

[profile.release]
strip = "debuginfo"
